fix weird background clipping issue on contest detail pane

--- a/static/src/sass/blocks/pane.scss
+++ b/static/src/sass/blocks/pane.scss
@@ -40,7 +40,7 @@
   }
 
   &__content {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     position: relative;
     background: #fff;
